# MeteoFlow

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: meteo_etl_dag.py
dags/sql/: post_load.sql
data/: README.md
data/meteo-jsonl/: abano-terme.jsonl  abbadia-cerreto.jsonl  abbadia-lariana.jsonl  abbadia-san-salvatore.jsonl  abbasanta.jsonl  abbateggio.jsonl  abbiategrasso.jsonl  abetone-cutigliano.jsonl  abriola.jsonl  acate.jsonl  accadia.jsonl  acceglio.jsonl  accettura.jsonl  acciano.jsonl  accumoli.jsonl  acerenza.jsonl  acerno.jsonl  acerra.jsonl  aci-bonaccorsi.jsonl  aci-castello.jsonl  aci-catena.jsonl  aci-sant-antonio.jsonl  acireale.jsonl  acquafondata.jsonl  acquaformosa.jsonl  acquafredda.jsonl  acqualagna.jsonl  acquanegra-cremonese.jsonl  acquanegra-sul-chiese.jsonl  acquapendente.jsonl  acquappesa.jsonl  acquaro.jsonl  acquasanta-terme.jsonl  acquasparta.jsonl  acquaviva-collecroce.jsonl  acquaviva-d-isernia.jsonl  acquaviva-delle-fonti.jsonl  acquaviva-picena.jsonl  acquaviva-platani.jsonl  acquedolci.jsonl  (+7848 more)
db/: init.sql
src/scripts/: aggregate_sql.py  bulk_copy.py  extract.py  load_dimensions.py
src/scripts/utils/: data_utils.py
tests/: conftest.py  test_aggregate_sql.py  test_data_utils.py  test_extract.py
tests/sql/: check_hourly_counts.sql  check_null_keys.sql  check_province_geometry.sql  check_region_geometry.sql  count_city_daily.sql  rolling_avg_temp_city.sql  spatial_join_cities_regions.sql  temp_anomaly_detection_city.sql  top_precipitation_cities.sql  weekly_precip_change_province.sql
